# qamqp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  qamqpclient.cpp
tests/auto/: CMakeLists.txt
